<resources>
    <string name="app_name">Pre-flop Action Trainer</string>
    <string name="dialog_title">Action Result</string>
    <string name="action_settings">Settings</string>

    <string name="fold_correct_message">Folding is correct!</string>
    <string name="call_correct_message">Calling is correct!</string>
    <string name="raise_correct_message">Raising is correct!</string>
    <string name="allin_correct_message">Pushing all-in is correct!</string>
    <string name="fold_incorrect_message">Folding is not the best option.</string>
    <string name="call_incorrect_message">Calling is not the best option.</string>
    <string name="raise_incorrect_message">Raising is not the best option.</string>
    <string name="allin_incorrect_message">Pushing all-in is not the best option.</string>

    <string name="OK">OK</string>

    <string name="folds" formatted="false">%s folds</string>
    <string name="calls" formatted="false">%s calls %d</string>
    <string name="raises" formatted="false">%s raises to %d</string>
    <string name="allin">and is all-in</string>
    <string name="multi_fold" formatted="false">%d folds</string>
    <string name="Preflop">Preflop:</string>
    
    <string name="initial_text">Click button to load new hand</string>
    <string name="blinds_display" formatted="false">Level %1d (%2d/%3d blinds</string>
    <string name="ante_display" formatted="false">, %d ante</string>
    <string name="num_players_display" formatted="false">) No Limit Hold\'em Tournament, %d Players</string>
    <string name="hero_display" formatted="false">Hero is %s with %s</string>

    <string name="BB">BB</string>
    <string name="SB">SB</string>
    <string name="BTN">BTN</string>
    <string name="CO">CO</string>
    <string name="UTG">UTG</string>
    <string name="UTG1">UTG+1</string>
    <string name="UTG2">UTG+2</string>
    <string name="MP">MP</string>
    <string name="MP1">MP1</string>
    <string name="MP2">MP2</string>
    <string name="MP3">MP3</string>
    <string name="HERO">Hero</string>
    <string name="bb">bb</string>

    <string name="new_hand_button_label">New Hand</string>
    <string name="allin_button_label">All-in</string>
    <string name="call_button_label">Call</string>
    <string name="raise_button_label">Raise</string>
    <string name="fold_button_label">Fold</string>
    <string name="show_button_label">Show</string>

</resources>
